--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Joker Ludo Group</title>
-  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div class="container">
-    <h1>🎭 Joker Ludo Group</h1>
-    <p>Join our main WhatsApp group:</p>
-    <a href="https://chat.whatsapp.com/XXXXXXXXXXXX" class="join-btn" target="_blank">🔗 Join Joker Group</a>
+<body style="text-align: center; padding: 50px; background-color: #111; color: white; font-family: sans-serif;">
 
-    <h2>Add Your Ludo Group</h2>
-    <p>If you want to add your own group, contact us:</p>
-    <p>📱 WhatsApp: <a href="https://wa.me/919876543210" target="_blank">+91-9876543210</a></p>
-    <p>✉️ Email: <a href="mailto:jokerludo@gmail.com">jokerludo@gmail.com</a></p>
-  </div>
+  <h1 style="color: red; font-size: 36px;">🎭 Joker Ludo Group</h1>
+  <p>Join our official WhatsApp group below:</p>
+  
+  <a href="https://chat.whatsapp.com/XXXXXXXX" target="_blank"
+     style="display: inline-block; padding: 12px 24px; background-color: red; color: white; text-decoration: none; font-size: 18px; border-radius: 5px;">
+    🔗 Join Joker Group
+  </a>
+
 </body>
 </html>
