--- a/index.html
+++ b/index.html
@@ -1,19 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Joker Ludo Group</title>
-</head>
-<body style="text-align: center; padding: 50px; background-color: #111; color: white; font-family: sans-serif;">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #0d0d0d;
+      color: white;
+    }
 
-  <h1 style="color: red; font-size: 36px;">🎭 Joker Ludo Group</h1>
-  <p>Join our official WhatsApp group below:</p>
-  
-  <a href="https://chat.whatsapp.com/XXXXXXXX" target="_blank"
-     style="display: inline-block; padding: 12px 24px; background-color: red; color: white; text-decoration: none; font-size: 18px; border-radius: 5px;">
-    🔗 Join Joker Group
-  </a>
+    header {
+      background-color: #ff1a1a;
+      padding: 20px;
+      text-align: center;
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      background-color: #1a1a1a;
+      padding: 10px 0;
+      flex-wrap: wrap;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      padding: 10px 20px;
+      transition: background 0.3s;
+    }
+
+    nav a:hover {
+      background-color: #333;
+    }
+
+    .content {
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: 12px 24px;
+      margin-top: 20px;
+      background-color: red;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-size: 18px;
+    }
+
+    footer {
+      background-color: #1a1a1a;
+      color: #ccc;
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+      margin-top: 40px;
+    }
+
+    @media screen and (max-width: 600px) {
+      nav a {
+        padding: 10px;
+        font-size: 14px;
+      }
+
+      .btn {
+        font-size: 16px;
+        padding: 10px 20px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>🎭 Joker Ludo Group</h1>
+    <a href="https://chat.whatsapp.com/XXXXXXXX" class="btn" target="_blank">Join Joker Group</a>
+  </header>
+
+  <nav>
+    <a href="#">Home</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+    <a href="#policy">Privacy Policy</a>
+  </nav>
+
+  <div class="content">
+    <section id="about">
+      <h2>About Joker Ludo</h2>
+      <p>Joker Ludo is India's most trusted WhatsApp Ludo gaming community. We provide fair matches, group coordination, and money-winning ludo tables.</p>
+    </section>
+
+    <section id="contact">
+      <h2>Contact Us</h2>
+      <p>📱 WhatsApp: <a href="https://wa.me/919876543210" style="color: #ff8080;">+91-9876543210</a></p>
+      <p>✉️ Email: <a href="mailto:jokerludo@gmail.com" style="color: #ff8080;">jokerludo@gmail.com</a></p>
+    </section>
+
+    <section id="policy">
+      <h2>Privacy Policy</h2>
+      <p>We respect your privacy. All information shared in our groups remains private. We do not share your data with any third-party platforms.</p>
+    </section>
+  </div>
+
+  <footer>
+    &copy; 2025 Joker Ludo Group. All rights reserved. | Designed for fair Ludo play.
+  </footer>
 
 </body>
 </html>
