--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Joker Ludo Group</title>
   <style>
     body {
@@ -11,38 +11,31 @@
       background-color: #0d0d0d;
       color: white;
     }
-
     header {
       background-color: #ff1a1a;
       padding: 20px;
       text-align: center;
     }
-
     nav {
       display: flex;
       justify-content: center;
       background-color: #1a1a1a;
-      padding: 10px 0;
       flex-wrap: wrap;
     }
-
     nav a {
       color: white;
       text-decoration: none;
-      padding: 10px 20px;
+      padding: 14px 20px;
       transition: background 0.3s;
     }
-
     nav a:hover {
       background-color: #333;
     }
-
     .content {
       max-width: 800px;
       margin: auto;
       padding: 20px;
     }
-
     .btn {
       display: inline-block;
       padding: 12px 24px;
@@ -53,22 +46,26 @@
       border-radius: 5px;
       font-size: 18px;
     }
-
     footer {
       background-color: #1a1a1a;
       color: #ccc;
       text-align: center;
       padding: 20px;
       font-size: 14px;
-      margin-top: 40px;
     }
-
+    footer a {
+      color: #ccc;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+    footer a:hover {
+      color: #fff;
+    }
     @media screen and (max-width: 600px) {
       nav a {
         padding: 10px;
         font-size: 14px;
       }
-
       .btn {
         font-size: 16px;
         padding: 10px 20px;
@@ -80,20 +77,21 @@
 
   <header>
     <h1>🎭 Joker Ludo Group</h1>
-    <a href="https://chat.whatsapp.com/XXXXXXXX" class="btn" target="_blank">Join Joker Group</a>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="btn" target="_blank">Join Joker Group</a>
   </header>
 
   <nav>
     <a href="#">Home</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
-    <a href="#policy">Privacy Policy</a>
+    <a href="#policy">Privacy</a>
+    <a href="https://wa.me/919876543210?text=I%20want%20to%20add%20my%20Ludo%20group" target="_blank">➕ Add Group</a>
   </nav>
 
   <div class="content">
     <section id="about">
       <h2>About Joker Ludo</h2>
-      <p>Joker Ludo is India's most trusted WhatsApp Ludo gaming community. We provide fair matches, group coordination, and money-winning ludo tables.</p>
+      <p>Joker Ludo is India's most trusted WhatsApp Ludo gaming community. We provide fair matches, fast payments, and active admins 24x7.</p>
     </section>
 
     <section id="contact">
@@ -104,12 +102,19 @@
 
     <section id="policy">
       <h2>Privacy Policy</h2>
-      <p>We respect your privacy. All information shared in our groups remains private. We do not share your data with any third-party platforms.</p>
+      <p>We respect your privacy. All information shared in our groups remains private. We do not share your data with third-party services. Your safety and trust is our top priority.</p>
     </section>
   </div>
 
   <footer>
-    &copy; 2025 Joker Ludo Group. All rights reserved. | Designed for fair Ludo play.
+    <p>
+      <a href="#">Home</a> |
+      <a href="#about">About</a> |
+      <a href="#contact">Contact</a> |
+      <a href="#policy">Privacy</a> |
+      <a href="https://wa.me/919876543210?text=I%20want%20to%20add%20my%20Ludo%20group" target="_blank">➕ Add Group</a>
+    </p>
+    <p>&copy; 2025 Joker Ludo Group. All rights reserved.</p>
   </footer>
 
 </body>
