--- a/index.html
+++ b/index.html
@@ -1,121 +1,149 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Joker Ludo Group</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Join JokerLudo – India's most trusted Ludo gaming group. Play smart, win big!">
+  <title>JokerLudo Group – Play Smart, Win Big</title>
   <style>
     body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #0d0d0d;
-      color: white;
+      padding: 0;
+      background-color: #f9f9f9;
+      color: #222;
+      line-height: 1.6;
     }
-    header {
-      background-color: #ff1a1a;
+    header, section, footer {
       padding: 20px;
-      text-align: center;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      background-color: #1a1a1a;
-      flex-wrap: wrap;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      padding: 14px 20px;
-      transition: background 0.3s;
-    }
-    nav a:hover {
-      background-color: #333;
-    }
-    .content {
-      max-width: 800px;
+      max-width: 1000px;
       margin: auto;
-      padding: 20px;
     }
-    .btn {
-      display: inline-block;
-      padding: 12px 24px;
-      margin-top: 20px;
-      background-color: red;
-      color: white;
-      text-decoration: none;
+    h1, h2, h3 {
+      color: #1a73e8;
+    }
+    .important {
+      background-color: #fff3cd;
+      padding: 10px;
+      border-left: 5px solid #ffbf00;
+      margin-bottom: 20px;
+    }
+    nav ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+    nav ul li {
+      background-color: #e1ecf4;
+      padding: 8px 12px;
       border-radius: 5px;
-      font-size: 18px;
+    }
+    nav ul li a {
+      text-decoration: none;
+      color: #000;
+    }
+    .rules li {
+      margin-bottom: 10px;
+    }
+    .cta-button {
+      background-color: #1a73e8;
+      color: white;
+      padding: 10px 20px;
+      text-decoration: none;
+      display: inline-block;
+      margin: 10px 0;
+      border-radius: 5px;
     }
     footer {
-      background-color: #1a1a1a;
-      color: #ccc;
-      text-align: center;
-      padding: 20px;
       font-size: 14px;
-    }
-    footer a {
-      color: #ccc;
-      text-decoration: none;
-      margin: 0 10px;
-    }
-    footer a:hover {
-      color: #fff;
-    }
-    @media screen and (max-width: 600px) {
-      nav a {
-        padding: 10px;
-        font-size: 14px;
-      }
-      .btn {
-        font-size: 16px;
-        padding: 10px 20px;
-      }
+      color: #555;
+      text-align: center;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
-
   <header>
-    <h1>🎭 Joker Ludo Group</h1>
-    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="btn" target="_blank">Join Joker Group</a>
+    <h1>🎮 JokerLudo Group – Play Smart, Win Big!</h1>
+    <p><strong>Make Your Dream Come True With Us...</strong></p>
   </header>
 
-  <nav>
-    <a href="#">Home</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-    <a href="#policy">Privacy</a>
-    <a href="https://wa.me/919876543210?text=I%20want%20to%20add%20my%20Ludo%20group" target="_blank">➕ Add Group</a>
-  </nav>
+  <section class="important">
+    <h2>📌 Official Deposit Number: 9670814522</h2>
+    <p>⚠️ केवल इसी नंबर पर डिपॉजिट करें। किसी अन्य नंबर पर भेजने से कोई ज़िम्मेदारी नहीं होगी।</p>
+  </section>
 
-  <div class="content">
-    <section id="about">
-      <h2>About Joker Ludo</h2>
-      <p>Joker Ludo is India's most trusted WhatsApp Ludo gaming community. We provide fair matches, fast payments, and active admins 24x7.</p>
-    </section>
+  <section>
+    <h2>🏠 Navigation</h2>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Join Ludo Group</a></li>
+        <li><a href="#">Ludo Group Rules</a></li>
+        <li><a href="#">Add Your Group</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms & Conditions</a></li>
+        <li><a href="#">FAQs</a></li>
+      </ul>
+    </nav>
+  </section>
 
-    <section id="contact">
-      <h2>Contact Us</h2>
-      <p>📱 WhatsApp: <a href="https://wa.me/919876543210" style="color: #ff8080;">+91-9876543210</a></p>
-      <p>✉️ Email: <a href="mailto:jokerludo@gmail.com" style="color: #ff8080;">jokerludo@gmail.com</a></p>
-    </section>
+  <section>
+    <h2>About JokerLudo</h2>
+    <p>JokerLudo Group एक ट्रस्टेड ऑनलाइन लूडो प्लेटफार्म है जहाँ आप रियल मनी में लूडो खेल सकते हैं। हमारा उद्देश्य है कि आपको एक सुरक्षित, पारदर्शी और मजेदार गेमिंग अनुभव दिया जाए।</p>
+  </section>
 
-    <section id="policy">
-      <h2>Privacy Policy</h2>
-      <p>We respect your privacy. All information shared in our groups remains private. We do not share your data with third-party services. Your safety and trust is our top priority.</p>
-    </section>
-  </div>
+  <section>
+    <h2>✅ Group Rules</h2>
+    <ul class="rules">
+      <li>डिपॉजिट पहले करें, फिर गेम बोलें।</li>
+      <li>पेमेंट प्रूफ 2 मिनट में भेजें।</li>
+      <li>टेबल चेक कर OK लिखें।</li>
+      <li>विनिंग स्क्रीनशॉट ज़रूर भेजें।</li>
+      <li>Opponent की गोटी खुलने के बाद गेम छोड़ने पर Loss होगा।</li>
+      <li>बैलेंस अपडेट होने तक नया गेम न बोलें।</li>
+      <li>सिर्फ डिपॉजिट जितनी अमाउंट की गेम खेलें।</li>
+      <li>गाली-गलौज मना है।</li>
+      <li>Withdrawal दिन में दो बार ही मिलेगा।</li>
+      <li>iPhone, FB, Auto पर No play अगर Condition है।</li>
+      <li>डिपॉजिट नंबर किसी से न पूछें – सिर्फ 9670814522 ही Official है।</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Join JokerLudo Group Now</h2>
+    <a class="cta-button" href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" target="_blank">Join WhatsApp Group</a>
+  </section>
+
+  <section>
+    <h2>Add Your Group</h2>
+    <p>अगर आप भी अपना लूडो ग्रुप इस साइट पर लिस्ट करवाना चाहते हैं, तो <a href="#">यहाँ क्लिक करें</a> और फॉर्म भरें।</p>
+  </section>
+
+  <section>
+    <h2>Contact Us</h2>
+    <p>📱 Mobile: <strong>9473746020</strong><br>
+       📧 Email: <strong>jokerludo01@gmail.com</strong></p>
+  </section>
+
+  <section>
+    <h2>Policies & Info</h2>
+    <ul>
+      <li><a href="#">Privacy Policy</a></li>
+      <li><a href="#">Terms & Conditions</a></li>
+      <li><a href="#">Refund Policy</a></li>
+      <li><a href="#">Fair Play Guidelines</a></li>
+      <li><a href="#">Anti-Fraud Notice</a></li>
+    </ul>
+  </section>
 
   <footer>
-    <p>
-      <a href="#">Home</a> |
-      <a href="#about">About</a> |
-      <a href="#contact">Contact</a> |
-      <a href="#policy">Privacy</a> |
-      <a href="https://wa.me/919876543210?text=I%20want%20to%20add%20my%20Ludo%20group" target="_blank">➕ Add Group</a>
-    </p>
-    <p>&copy; 2025 Joker Ludo Group. All rights reserved.</p>
+    <p><strong>“दूसरे ग्रुप में धोखा खाओगे, पर JokerLudo में हमेशा जीत पाओगे!”</strong></p>
+    <p>&copy; 2025 JokerLudo Group – All Rights Reserved.</p>
   </footer>
-
 </body>
 </html>
