--- a/index.html
+++ b/index.html
@@ -3,65 +3,46 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>JokerLudo Group - Home</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <title>JokerLudo Group</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="rules.html">Rules</a> |
-    <a href="join.html">Join Group</a> |
-    <a href="contact.html">Contact</a> |
-    <a href="privacy.html">Privacy</a>
+
+  <nav class="navbar">
+    <div class="logo">🎲 JokerLudo</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="rules.html">Rules</a></li>
+      <li><a href="join.html">Join</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </nav>
 
-  <header>
+  <section class="hero">
     <h1>Welcome to JokerLudo Group! 🎉</h1>
-    <p><strong>Make Your Luck with JokerLudo – India’s Trusted Ludo Earning Platform!</strong></p>
-    <hr>
-  </header>
-
-  <section>
-    <h2>🚀 About JokerLudo Group</h2>
-    <p><strong>JokerLudo</strong> ek trusted aur well-managed online Ludo gaming WhatsApp group hai jahan aap apni gaming skills se paisa kama sakte hain.</p>
-    <ul>
-      <li>✅ Active 24x7 Support</li>
-      <li>✅ Daily Multiple Tables</li>
-      <li>✅ Instant Balance Update</li>
-      <li>✅ Quick Withdrawals</li>
-      <li>✅ One Verified Deposit Number Only: <strong style="color:red;">8920707064</strong></li>
-    </ul>
+    <p>Make Your Luck with JokerLudo – India’s Trusted Ludo Earning Platform!</p>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn">Join Now</a>
   </section>
 
-  <section>
-    <h2>📆 Join JokerLudo Group Now!</h2>
-    <p><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" target="_blank">🔗 Join WhatsApp Group</a></p>
-    <p>Ya Google me search karein: <strong>JokerLudo Group (jokerludo.in)</strong></p>
+  <section class="features">
+    <div class="card">
+      <h3>✅ 24x7 Support</h3>
+      <p>Hamesha aapke sath – turant response.</p>
+    </div>
+    <div class="card">
+      <h3>✅ Quick Withdrawals</h3>
+      <p>Har jeet par instant paisa.</p>
+    </div>
+    <div class="card">
+      <h3>✅ Trusted Players</h3>
+      <p>Official Deposit No: <strong>8920707064</strong></p>
+    </div>
   </section>
 
-  <section>
-    <h2>💬 Important Notice</h2>
-    <ul>
-      <li>Hamara sirf ek hi deposit number hai: <strong style="color:red;">8920707064</strong></li>
-      <li>Kisi unknown se payment request aane par turant usse block karein</li>
-      <li>JokerLudo kabhi bhi personal message ya call karke deposit nahi maangta</li>
-      <li>Har table ke sath description me official deposit number diya jata hai</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>🚨 Safety Tips for Players</h2>
-    <ul>
-      <li>Sirf verified group me hi game khelein</li>
-      <li>Kisi ko apna personal wallet ya OTP na dein</li>
-      <li>Har game ka proof rakhna zaroori hai</li>
-      <li>Group ke har rule ko dhyan se padhein aur follow karein</li>
-    </ul>
-  </section>
-
-  <footer>
-    <p>© 2025 JokerLudo Group, All Rights Reserved.</p>
-    <p>📱 Designed for Ludo Lovers. Safe | Secure | Trusted.</p>
+  <footer class="footer">
+    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
   </footer>
+
 </body>
 </html>
