--- a/index.html
+++ b/index.html
@@ -2,77 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>JokerLudo Group</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>JokerLudo - Home</title>
+  <link rel="stylesheet" href="css/home.css" />
+  <link rel="stylesheet" href="css/animations.css" />
 </head>
 <body>
+  <div class="container fade-in">
+    <h1>Welcome to JokerLudo Group! 🎉</h1>
+    <p class="intro">Make Your Luck with JokerLudo – India’s Trusted Ludo Earning Platform!</p>
 
-  <header class="header">
-    <h1>🎲 JokerLudo Group</h1>
-    <p>India’s Trusted Ludo Earning Platform</p>
-    <p class="deposit">Only Deposit Number: <strong>9670814522</strong></p>
-  </header>
-
-  <main class="container">
-    <section class="about">
-      <h2>🚀 About JokerLudo Group</h2>
-      <p>JokerLudo ek trusted aur well-managed online Ludo gaming WhatsApp group hai jahan aap apni gaming skills se paisa kama sakte hain. Hamara goal hai ek secure, transparent, aur fair gaming environment provide karna jahan players bina kisi jhanjhat ke apna game enjoy karein aur jeet ka full reward paayein.</p>
+    <div class="section">
+      <h2>About JokerLudo Group</h2>
       <ul>
         <li>✅ Active 24x7 Support</li>
         <li>✅ Daily Multiple Tables</li>
         <li>✅ Instant Balance Update</li>
         <li>✅ Quick Withdrawals</li>
-        <li>✅ Verified Deposit Number Only: <strong>9670814522</strong></li>
+        <li>✅ One Verified Deposit Number Only: <strong>8920707064</strong></li>
       </ul>
-    </section>
+    </div>
 
-    <section class="rules">
-      <h2>📅 JokerLudo Rules & Guidelines</h2>
-      <ol>
-        <li>🎯 Deposit before game — Table sirf deposit ke baad milega.</li>
-        <li>🧾 Payment proof within 2 minutes send karein.</li>
-        <li>✅ Table lagte hi OK likhkar confirm karein.</li>
-        <li>🏆 Jeetne ke baad winning screenshot zaroor bhejein.</li>
-        <li>🚫 Exit after opponent goti = Haar.</li>
-        <li>💸 Balance update hone tak new game na maangein.</li>
-        <li>🗣️ No gaali/abuse — personal chat me dispute resolve karein.</li>
-        <li>📤 Withdrawals: 2 baar per day, ₹1000+ to anytime. Paytm unlimited, GPay/PhonePe 1 baar.</li>
-        <li>💰 Apne deposit ke hisaab se hi table bolein.</li>
-        <li>🎲 Game Conditions (100++, no FB/iPhone) ka palan zaroori.</li>
-        <li>🚨 No fake table or screenshots.</li>
-        <li>📵 Auto play ke har move par 10% penalty (if "No Auto").</li>
-        <li>❌ Popular code se goti khule to Rs.10 penalty, game cancel.</li>
-      </ol>
-    </section>
+    <div class="section">
+      <h2>Join Now</h2>
+      <a class="btn" href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" target="_blank">Join WhatsApp Group</a>
+    </div>
 
-    <section class="safety">
-      <h2>🚨 Safety Tips</h2>
-      <ul>
-        <li>✅ Sirf verified group me game khelein.</li>
-        <li>❌ Kisi ko apna wallet/OTP na dein.</li>
-        <li>🧾 Har game ka proof rakhna zaroori hai.</li>
-        <li>📚 Group ke rules ko dhyan se padhein aur follow karein.</li>
-      </ul>
-    </section>
-
-    <section class="join">
-      <h2>📆 Join JokerLudo Now!</h2>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn">Join WhatsApp Group</a>
-      <p>Ya Google me search karein: <strong>JokerLudo Group (jokerludo.in)</strong></p>
-    </section>
-
-    <section class="contact">
-      <h2>📞 Contact</h2>
-      <p><strong>Admin:</strong> 9473746020</p>
-      <p><strong>Email:</strong> <a href="mailto:jokerludo01@gmail.com">jokerludo01@gmail.com</a></p>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <p>© 2025 JokerLudo Group. Designed for Ludo Lovers. Safe | Secure | Trusted.</p>
-  </footer>
-
+    <footer>
+      <p>© 2025 JokerLudo Group, All Rights Reserved.</p>
+    </footer>
+  </div>
 </body>
 </html>
