--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JokerLudo - Home</title>
+  <title>JokerLudo Group - Home</title>
   <link rel="stylesheet" href="css/home.css" />
-  <link rel="stylesheet" href="css/animations.css" />
 </head>
 <body>
-  <div class="container fade-in">
-    <h1>Welcome to JokerLudo Group! 🎉</h1>
-    <p class="intro">Make Your Luck with JokerLudo – India’s Trusted Ludo Earning Platform!</p>
 
-    <div class="section">
-      <h2>About JokerLudo Group</h2>
+  <div class="container">
+    <h1 class="animated-title">Welcome to JokerLudo Group! 🎉</h1>
+    <p class="subtext">Make Your Luck with JokerLudo – India’s Trusted Ludo Earning Platform!</p>
+
+    <section class="features">
+      <h2>🚀 About JokerLudo Group</h2>
       <ul>
         <li>✅ Active 24x7 Support</li>
         <li>✅ Daily Multiple Tables</li>
@@ -21,16 +21,25 @@
         <li>✅ Quick Withdrawals</li>
         <li>✅ One Verified Deposit Number Only: <strong>8920707064</strong></li>
       </ul>
-    </div>
+    </section>
 
-    <div class="section">
-      <h2>Join Now</h2>
-      <a class="btn" href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" target="_blank">Join WhatsApp Group</a>
-    </div>
+    <section class="join">
+      <h2>📆 Join JokerLudo Group Now!</h2>
+      <a class="join-btn" href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" target="_blank">Join WhatsApp Group</a>
+      <p>Ya Google me search karein: <strong>JokerLudo Group (jokerludo.in)</strong></p>
+    </section>
 
-    <footer>
-      <p>© 2025 JokerLudo Group, All Rights Reserved.</p>
-    </footer>
+    <section class="contact">
+      <h2>📞 Contact</h2>
+      <p>Admin: <strong>9473746020</strong></p>
+      <p>Email: <a href="mailto:jokerludo01@gmail.com">jokerludo01@gmail.com</a></p>
+    </section>
   </div>
+
+  <footer class="footer">
+    <p>&copy; 2025 JokerLudo Group | All Rights Reserved.</p>
+    <p>Designed for Ludo Lovers 🎲 | Safe • Secure • Trusted</p>
+  </footer>
+
 </body>
 </html>
