--- a/index.html
+++ b/index.html
@@ -2,43 +2,195 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JokerLudo Group - Home</title>
-  <link rel="stylesheet" href="css/home.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>JokerLudo Group</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: #f3f3ff;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    /* Navbar */
+    .navbar {
+      background: #2d2e52;
+      color: #fff;
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .logo {
+      font-size: 24px;
+      font-weight: 600;
+    }
+
+    .nav-links {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+    }
+
+    .nav-links a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+
+    .nav-links a:hover {
+      color: #ffde59;
+    }
+
+    /* Hero Section */
+    .hero {
+      text-align: center;
+      padding: 60px 20px;
+      background: linear-gradient(to right, #fceabb, #f8b500);
+      animation: slideIn 1s ease-out;
+    }
+
+    .hero h1 {
+      font-size: 36px;
+      margin-bottom: 10px;
+    }
+
+    .hero p {
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+
+    .join-btn {
+      background: #2d2e52;
+      color: #fff;
+      padding: 12px 25px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s ease;
+    }
+
+    .join-btn:hover {
+      background: #1b1c3a;
+      transform: scale(1.05);
+    }
+
+    /* Features Section */
+    .features {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      padding: 50px 20px;
+      animation: fadeIn 2s ease-in;
+    }
+
+    .card {
+      background: #fff;
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      width: 280px;
+      transition: transform 0.3s ease;
+      text-align: center;
+    }
+
+    .card:hover {
+      transform: translateY(-10px);
+    }
+
+    /* Footer */
+    .footer {
+      background: #2d2e52;
+      color: #fff;
+      text-align: center;
+      padding: 20px 0;
+      margin-top: 40px;
+    }
+
+    /* Animations */
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes slideIn {
+      from {
+        opacity: 0;
+        transform: translateY(-30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .nav-links {
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 10px;
+      }
+
+      .features {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+  </style>
 </head>
 <body>
 
-  <div class="container">
-    <h1 class="animated-title">Welcome to JokerLudo Group! 🎉</h1>
-    <p class="subtext">Make Your Luck with JokerLudo – India’s Trusted Ludo Earning Platform!</p>
+  <nav class="navbar">
+    <div class="logo">🎲 JokerLudo</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="rules.html">Rules</a></li>
+      <li><a href="join.html">Join</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
-    <section class="features">
-      <h2>🚀 About JokerLudo Group</h2>
-      <ul>
-        <li>✅ Active 24x7 Support</li>
-        <li>✅ Daily Multiple Tables</li>
-        <li>✅ Instant Balance Update</li>
-        <li>✅ Quick Withdrawals</li>
-        <li>✅ One Verified Deposit Number Only: <strong>8920707064</strong></li>
-      </ul>
-    </section>
+  <section class="hero">
+    <h1>Welcome to JokerLudo Group! 🎉</h1>
+    <p>Make Your Luck with JokerLudo – India’s Trusted Ludo Earning Platform!</p>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn">Join Now</a>
+  </section>
 
-    <section class="join">
-      <h2>📆 Join JokerLudo Group Now!</h2>
-      <a class="join-btn" href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" target="_blank">Join WhatsApp Group</a>
-      <p>Ya Google me search karein: <strong>JokerLudo Group (jokerludo.in)</strong></p>
-    </section>
-
-    <section class="contact">
-      <h2>📞 Contact</h2>
-      <p>Admin: <strong>9473746020</strong></p>
-      <p>Email: <a href="mailto:jokerludo01@gmail.com">jokerludo01@gmail.com</a></p>
-    </section>
-  </div>
+  <section class="features">
+    <div class="card">
+      <h3>✅ 24x7 Support</h3>
+      <p>Hamesha aapke sath – turant response.</p>
+    </div>
+    <div class="card">
+      <h3>✅ Quick Withdrawals</h3>
+      <p>Har jeet par instant paisa.</p>
+    </div>
+    <div class="card">
+      <h3>✅ Trusted Players</h3>
+      <p>Official Deposit No: <strong>8920707064</strong></p>
+    </div>
+  </section>
 
   <footer class="footer">
-    <p>&copy; 2025 JokerLudo Group | All Rights Reserved.</p>
-    <p>Designed for Ludo Lovers 🎲 | Safe • Secure • Trusted</p>
+    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
   </footer>
 
 </body>
