--- a/rules.html
+++ b/rules.html
@@ -3,50 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>JokerLudo Rules & Guidelines</title>
+  <title>Rules - JokerLudo</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="rules.html">Rules</a> |
-    <a href="join.html">Join Group</a> |
-    <a href="contact.html">Contact</a> |
-    <a href="privacy.html">Privacy</a>
+
+  <!-- Navbar (Same on All Pages) -->
+  <nav class="navbar">
+    <div class="logo">🎲 JokerLudo</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="rules.html">Rules</a></li>
+      <li><a href="join.html">Join</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </nav>
 
-  <header>
-    <h1>📅 JokerLudo Rules & Guidelines</h1>
-    <hr>
-  </header>
-
-  <section>
-    <ol>
-      <li><strong>Deposit Before Game:</strong> Game se pehle deposit karna zaroori hai. Sirf deposit ke baad hi table bol sakte hain.</li>
-      <li><strong>Payment Proof:</strong> Deposit ke 2 minute ke andar screenshot bhejna hoga.</li>
-      <li><strong>Table Confirmation:</strong> Table lagte hi screenshot dekhein, "OK" likhein, phir game start karein.</li>
-      <li><strong>Winning Proof:</strong> Jeetne ke baad winning screenshot group me bhejna zaroori hai.</li>
-      <li><strong>Game Exit:</strong> Opponent ki goti khulne ke baad exit karne wale ki haar hogi.</li>
-      <li><strong>Balance Update:</strong> Naya game tab tak na maangein jab tak balance update na ho.</li>
-      <li><strong>Abuse Prohibited:</strong> Kisi ko bhi badtameezi ya gali na dein. Dispute personal chat me solve karein.</li>
-      <li><strong>Withdrawals:</strong>
-        <ul>
-          <li>Din me 2 baar withdrawal.</li>
-          <li>1000+ balance par anytime withdrawal.</li>
-          <li>Paytm – unlimited, GPay/PhonePe – 1 baar per day.</li>
-        </ul>
-      </li>
-      <li><strong>Table Limit:</strong> Deposit ke hisaab se hi table bolein.</li>
-      <li><strong>Game Conditions:</strong> Agar kisi ne condition rakhi hai (jaise 100++), to dono players ko follow karna hoga.</li>
-      <li><strong>No Fake Tables:</strong> Kisi bhi fake screenshot ya fraud par strict action.</li>
-      <li><strong>iPhone/FB Condition:</strong> Agar "no iPhone" ya "no FB" bola gaya hai to uska dhyan rakhein.</li>
-      <li><strong>Auto Play:</strong> "No auto" me agar auto chala to 10% winning deduct hoga.</li>
-      <li><strong>Popular Code:</strong> Popular code se goti khulti hai aur 10 steps se kam hoti hai to game cancel & Rs.10 penalty.</li>
-    </ol>
+  <!-- Page Specific Content -->
+  <section class="hero">
+    <h1>📜 Rules & Guidelines</h1>
+    <p>Yahan JokerLudo ke sabhi rules aur niyam likhe gaye hain.</p>
   </section>
 
-  <footer>
-    <p>© 2025 JokerLudo Group. Follow the Rules, Play Fair. 🎲</p>
-  </footer>
-</body>
-</html>
+  <section class="features">
+    <div class="card">
+      <h3>🔹 Deposit First</h3>
+      <p>Game se pehle deposit karna zaroori hai.</p>
+    </div>
+    <div class="card">
+      <h3>🔹 Winning Proof</h3>
+      <p>Har jeet ke baad screenshot bhejna hoga.</p>
+    </div>
+    <div class="card">
+      <h3>🔹 No Abuse</h3>
+      <p>Group me badtame
