--- a/join.html
+++ b/join.html
@@ -3,44 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Join JokerLudo Group</title>
+  <title>Join - JokerLudo</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="rules.html">Rules</a> |
-    <a href="join.html">Join Group</a> |
-    <a href="contact.html">Contact</a> |
-    <a href="privacy.html">Privacy</a>
+
+  <nav class="navbar">
+    <div class="logo">🎲 JokerLudo</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="rules.html">Rules</a></li>
+      <li><a href="join.html">Join</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </nav>
 
-  <header>
-    <h1>🔗 Join JokerLudo WhatsApp Group</h1>
-    <hr>
-  </header>
-
-  <section>
-    <p>Apna luck aazmaayein aur Ludo khelkar paisa jeetiye JokerLudo ke trusted WhatsApp group ke saath!</p>
-
-    <h3>👇 Click Karke Group Join Karein:</h3>
-    <p>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" target="_blank">
-        🔰 Join WhatsApp Group Now
-      </a>
-    </p>
-
-    <p>Ya Google me search karein: <strong>JokerLudo Group (jokerludo.in)</strong></p>
-
-    <h4>⚠️ Note:</h4>
-    <ul>
-      <li>Sirishf verified players ko hi group me add kiya jaata hai.</li>
-      <li>Fake ID ya fraud attempt par group se turant remove kiya jaayega.</li>
-    </ul>
+  <section class="hero">
+    <h1>🕹️ Join Our JokerLudo WhatsApp Group</h1>
+    <p>Best Ludo Experience ke liye trusted group ka hissa baniye.</p>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn">Join Group Now</a>
   </section>
 
-  <footer>
-    <p>© 2025 JokerLudo Group. Game Smart, Play Safe. 🎯</p>
-  </footer>
-</body>
-</html>
+  <se
