--- a/join.html
+++ b/join.html
@@ -25,4 +25,24 @@
     <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn">Join Group Now</a>
   </section>
 
-  <se
+  <section class="features">
+    <div class="card">
+      <h3>📥 Deposit Number</h3>
+      <p>UPI/Paytm: <strong>8920707064</strong></p>
+    </div>
+    <div class="card">
+      <h3>📲 Fast Support</h3>
+      <p>Admin se turant madad paayein.</p>
+    </div>
+    <div class="card">
+      <h3>💸 Real Earning</h3>
+      <p>Har jeet par real paisa – instantly withdraw karein.</p>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
+  </footer>
+
+</body>
+</html>
