--- a/contact.html
+++ b/contact.html
@@ -3,44 +3,45 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Admin - JokerLudo</title>
+  <title>Contact - JokerLudo</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="rules.html">Rules</a> |
-    <a href="join.html">Join Group</a> |
-    <a href="contact.html">Contact</a> |
-    <a href="privacy.html">Privacy</a>
+
+  <nav class="navbar">
+    <div class="logo">🎲 JokerLudo</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="rules.html">Rules</a></li>
+      <li><a href="join.html">Join</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </nav>
 
-  <header>
-    <h1>📞 Contact JokerLudo Admin</h1>
-    <hr>
-  </header>
-
-  <section>
-    <p>Agar aapko kisi bhi tarah ki help chahiye ho, ya aapka koi sawal ho JokerLudo ke regarding, to neeche diye gaye contact options ka use karein.</p>
-
-    <h3>📱 Admin Contact Number:</h3>
-    <p><strong>9473746020</strong> (WhatsApp Available)</p>
-
-    <h3>📧 Email:</h3>
-    <p>
-      <a href="mailto:jokerludo01@gmail.com">jokerludo01@gmail.com</a>
-    </p>
-
-    <h4>🛑 Important Note:</h4>
-    <ul>
-      <li>Kabhi bhi kisi unknown number se aaye message ya call pe deposit na karein.</li>
-      <li>JokerLudo team kabhi personal call/message karke paisa nahi mangti.</li>
-      <li>Official deposit number sirf: <strong>8920707064</strong></li>
-    </ul>
+  <section class="hero">
+    <h1>📞 Contact JokerLudo Team</h1>
+    <p>Agar aapko koi dikkat ho ya support chahiye ho, hume contact karein.</p>
   </section>
 
-  <footer>
-    <p>© 2025 JokerLudo Group | Safe Gaming Zone 🎮</p>
+  <section class="features">
+    <div class="card">
+      <h3>📱 WhatsApp</h3>
+      <p><a href="https://wa.me/918920707064" target="_blank">+91 8920707064</a></p>
+    </div>
+    <div class="card">
+      <h3>📧 Email</h3>
+      <p><a href="mailto:jokergrouphelp@gmail.com">jokergrouphelp@gmail.com</a></p>
+    </div>
+    <div class="card">
+      <h3>👤 Admin</h3>
+      <p>Contact directly via WhatsApp for help & support.</p>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
   </footer>
+
 </body>
 </html>
