--- a/rules.html
+++ b/rules.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rules - JokerLudo</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <title>JokerLudo | Rules</title>
+  <link rel="stylesheet" href="css/rules.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <!-- Navbar (Same on All Pages) -->
   <nav class="navbar">
     <div class="logo">🎲 JokerLudo</div>
     <ul class="nav-links">
@@ -20,21 +19,17 @@
     </ul>
   </nav>
 
-  <!-- Page Specific Content -->
-  <section class="hero">
-    <h1>📜 Rules & Guidelines</h1>
-    <p>Yahan JokerLudo ke sabhi rules aur niyam likhe gaye hain.</p>
+  <section class="rules-section">
+    <h2>Game Rules & Instructions</h2>
+    <p>✅ Har game ka entry fee fix hai.</p>
+    <p>✅ Agar opponent leave karta hai, aap winner declare honge.</p>
+    <p>✅ Game record screen shot/send karna zaruri hai.</p>
+    <p>✅ Kisi bhi cheating par account block ho sakta hai.</p>
   </section>
 
-  <section class="features">
-    <div class="card">
-      <h3>🔹 Deposit First</h3>
-      <p>Game se pehle deposit karna zaroori hai.</p>
-    </div>
-    <div class="card">
-      <h3>🔹 Winning Proof</h3>
-      <p>Har jeet ke baad screenshot bhejna hoga.</p>
-    </div>
-    <div class="card">
-      <h3>🔹 No Abuse</h3>
-      <p>Group me badtame
+  <footer class="footer">
+    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
+  </footer>
+
+</body>
+</html>
