--- a/join.html
+++ b/join.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Join - JokerLudo</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <title>JokerLudo | Join</title>
+  <link rel="stylesheet" href="css/join.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,25 +19,11 @@
     </ul>
   </nav>
 
-  <section class="hero">
-    <h1>🕹️ Join Our JokerLudo WhatsApp Group</h1>
-    <p>Best Ludo Experience ke liye trusted group ka hissa baniye.</p>
-    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn">Join Group Now</a>
-  </section>
-
-  <section class="features">
-    <div class="card">
-      <h3>📥 Deposit Number</h3>
-      <p>UPI/Paytm: <strong>8920707064</strong></p>
-    </div>
-    <div class="card">
-      <h3>📲 Fast Support</h3>
-      <p>Admin se turant madad paayein.</p>
-    </div>
-    <div class="card">
-      <h3>💸 Real Earning</h3>
-      <p>Har jeet par real paisa – instantly withdraw karein.</p>
-    </div>
+  <section class="join-section">
+    <h2>How to Join JokerLudo?</h2>
+    <p>🎯 Step 1: WhatsApp pe contact kare – <strong>8920707064</strong></p>
+    <p>🎯 Step 2: Deposit kare entry fee.</p>
+    <p>🎯 Step 3: Game code milega – khelna shuru karo!</p>
   </section>
 
   <footer class="footer">
