--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact - JokerLudo</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <title>JokerLudo | Contact</title>
+  <link rel="stylesheet" href="css/contact.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,24 +19,11 @@
     </ul>
   </nav>
 
-  <section class="hero">
-    <h1>📞 Contact JokerLudo Team</h1>
-    <p>Agar aapko koi dikkat ho ya support chahiye ho, hume contact karein.</p>
-  </section>
-
-  <section class="features">
-    <div class="card">
-      <h3>📱 WhatsApp</h3>
-      <p><a href="https://wa.me/918920707064" target="_blank">+91 8920707064</a></p>
-    </div>
-    <div class="card">
-      <h3>📧 Email</h3>
-      <p><a href="mailto:jokergrouphelp@gmail.com">jokergrouphelp@gmail.com</a></p>
-    </div>
-    <div class="card">
-      <h3>👤 Admin</h3>
-      <p>Contact directly via WhatsApp for help & support.</p>
-    </div>
+  <section class="contact-section">
+    <h2>Contact JokerLudo Team</h2>
+    <p>📞 Phone: <strong>8920707064</strong></p>
+    <p>📲 WhatsApp: <strong>Click on Join Now</strong></p>
+    <p>📧 Email: support@jokerludo.in</p>
   </section>
 
   <footer class="footer">
