--- a/rules.html
+++ b/rules.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>JokerLudo | Rules</title>
-  <link rel="stylesheet" href="css/rules.css">
+  <title>Rules - JokerLudo Group</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -13,18 +13,39 @@
     <div class="logo">🎲 JokerLudo</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="rules.html">Rules</a></li>
+      <li><a href="rules.html" class="active">Rules</a></li>
       <li><a href="join.html">Join</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
-  <section class="rules-section">
-    <h2>Game Rules & Instructions</h2>
-    <p>✅ Har game ka entry fee fix hai.</p>
-    <p>✅ Agar opponent leave karta hai, aap winner declare honge.</p>
-    <p>✅ Game record screen shot/send karna zaruri hai.</p>
-    <p>✅ Kisi bhi cheating par account block ho sakta hai.</p>
+  <section class="hero">
+    <h1>📜 JokerLudo Group Rules</h1>
+    <p>Play Safe. Win Fair. Follow the Rules.</p>
+  </section>
+
+  <section class="features rules-section">
+    <div class="card" style="max-width: 900px; text-align: left;">
+      <ol style="padding-left: 20px;">
+        <li>मनी किंग लूडो व्हाट्सप्प ग्रुप में गेम बोलने से पहले आपको डिपोसिट करना होगा जीतने का भी आपको खेलना है!</li>
+        <li>डिपोसिट के 2 मिनट के अंदर पेमेंट प्रूफ मनी किंग लूडो ग्रुप में या एडमिन को भेजना होगा।</li>
+        <li>टेबल चेक कर OK लिखें और फिर गेम खेलें, बिना चेक गेम खेलने पर कोई सुनवाई नहीं होगी।</li>
+        <li>विनिंग स्क्रीनशॉट टेबल के साथ लगाएं ताकि बैलेंस अपडेट में कोई दिक्कत न हो।</li>
+        <li>खिलाड़ी गेम से बाहर जाता है तो उसकी हानि होगी यदि विरोधी की गोटी खुल चुकी है।</li>
+        <li>जब तक बैलेंस अपडेट न हो जाए तब तक नया गेम न बोलें।</li>
+        <li>बैलेंस अपडेट के बाद ही गेम बोलें।</li>
+        <li>किसी से गाली गलौच न करें, झगड़ा हो तो पर्सनल में सुलझाएं।</li>
+        <li>₹1000 से ऊपर है तो कितनी भी बार पैसा निकाल सकते हैं, PhonePe और GPay वालों को एक बार मिलेगा।</li>
+        <li>विरोधी की गोटी खुलने से पहले गेम से निकले तो गेम कैंसिल माना जायेगा।</li>
+        <li>उतने की ही गेम बोलें जितना डिपॉजिट है, ज्यादा पर विन नहीं मिलेगा।</li>
+        <li>100++ या 50++ की कंडीशन रखी तो खुद और विरोधी का गेम चेक करें, गोटी 10 बॉक्स से आगे न हो तो गेम कैंसिल होगा।</li>
+        <li>No FB की कंडीशन पर FB से खेला गया तो गेम कैंसिल होगा।</li>
+        <li>No iPhone की कंडीशन पर iPhone से खेला गया तो गेम कैंसिल होगा।</li>
+        <li>डिपॉजिट नंबर किसी से न पूछें। केवल 8920707064 ही valid है।</li>
+        <li>No Auto की शर्त पर Auto चला तो हर Auto पर 10% काट कर हारने वाले को जोड़ा जायेगा, प्रूफ देना होगा।</li>
+        <li>Popular code से गेम खेलने पर, अगर गोटी खुली और 10 box से आगे नहीं गई तो गेम कैंसिल होगा और कोड देने वाले से ₹10 चार्ज लिया जाएगा।</li>
+      </ol>
+    </div>
   </section>
 
   <footer class="footer">
