--- a/rules.html
+++ b/rules.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rules - JokerLudo Group</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <title>JokerLudo - Rules</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
+  <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">🎲 JokerLudo</div>
     <ul class="nav-links">
@@ -19,37 +20,33 @@
     </ul>
   </nav>
 
-  <section class="hero">
-    <h1>📜 JokerLudo Group Rules</h1>
-    <p>Play Safe. Win Fair. Follow the Rules.</p>
-  </section>
-
-  <section class="features rules-section">
-    <div class="card" style="max-width: 900px; text-align: left;">
-      <ol style="padding-left: 20px;">
-        <li>मनी किंग लूडो व्हाट्सप्प ग्रुप में गेम बोलने से पहले आपको डिपोसिट करना होगा जीतने का भी आपको खेलना है!</li>
-        <li>डिपोसिट के 2 मिनट के अंदर पेमेंट प्रूफ मनी किंग लूडो ग्रुप में या एडमिन को भेजना होगा।</li>
-        <li>टेबल चेक कर OK लिखें और फिर गेम खेलें, बिना चेक गेम खेलने पर कोई सुनवाई नहीं होगी।</li>
-        <li>विनिंग स्क्रीनशॉट टेबल के साथ लगाएं ताकि बैलेंस अपडेट में कोई दिक्कत न हो।</li>
-        <li>खिलाड़ी गेम से बाहर जाता है तो उसकी हानि होगी यदि विरोधी की गोटी खुल चुकी है।</li>
-        <li>जब तक बैलेंस अपडेट न हो जाए तब तक नया गेम न बोलें।</li>
-        <li>बैलेंस अपडेट के बाद ही गेम बोलें।</li>
-        <li>किसी से गाली गलौच न करें, झगड़ा हो तो पर्सनल में सुलझाएं।</li>
-        <li>₹1000 से ऊपर है तो कितनी भी बार पैसा निकाल सकते हैं, PhonePe और GPay वालों को एक बार मिलेगा।</li>
-        <li>विरोधी की गोटी खुलने से पहले गेम से निकले तो गेम कैंसिल माना जायेगा।</li>
-        <li>उतने की ही गेम बोलें जितना डिपॉजिट है, ज्यादा पर विन नहीं मिलेगा।</li>
-        <li>100++ या 50++ की कंडीशन रखी तो खुद और विरोधी का गेम चेक करें, गोटी 10 बॉक्स से आगे न हो तो गेम कैंसिल होगा।</li>
-        <li>No FB की कंडीशन पर FB से खेला गया तो गेम कैंसिल होगा।</li>
-        <li>No iPhone की कंडीशन पर iPhone से खेला गया तो गेम कैंसिल होगा।</li>
-        <li>डिपॉजिट नंबर किसी से न पूछें। केवल 8920707064 ही valid है।</li>
-        <li>No Auto की शर्त पर Auto चला तो हर Auto पर 10% काट कर हारने वाले को जोड़ा जायेगा, प्रूफ देना होगा।</li>
-        <li>Popular code से गेम खेलने पर, अगर गोटी खुली और 10 box से आगे नहीं गई तो गेम कैंसिल होगा और कोड देने वाले से ₹10 चार्ज लिया जाएगा।</li>
+  <!-- Rules Section -->
+  <section class="rules-section">
+    <div class="container">
+      <h1 class="section-title">📜 JokerLudo Group Rules</h1>
+      <ol class="rules-list">
+        <li>डिपोसिट करने के बाद 2 मिनट के अंदर स्क्रीनशॉट एडमिन को भेजना अनिवार्य है।</li>
+        <li>टेबल लगने के बाद OK लिखें, बिना चेक किए गेम खेला तो जिम्मेदारी आपकी होगी।</li>
+        <li>विनिंग स्क्रीनशॉट टेबल के साथ ग्रुप में भेजें।</li>
+        <li>गोटी खुलने के बाद गेम छोड़ने पर नुकसान आपका होगा।</li>
+        <li>बैलेंस अपडेट होने तक नया गेम न मांगे।</li>
+        <li>गाली गलौज करने पर ग्रुप से हटाया जाएगा।</li>
+        <li>पर्सनल विवाद ग्रुप में न लाएं।</li>
+        <li>Withdraw ₹1000 से कम 2 बार, ₹1000+ कितनी भी बार (Paytm), Gpay/PhonePe – 1 बार।</li>
+        <li>डिपॉजिट से ज्यादा रकम के गेम नहीं बोलें, गलती से टेबल लगी तो भी विन नहीं मिलेगा।</li>
+        <li>100++/50++ गेम कंडीशन रखने वाला खुद दोनों गिनती चेक करे।</li>
+        <li>no fb / no iPhone / no auto / popular rules मानने पर, violation पे गेम कैंसल होगा।</li>
+        <li>auto चालू होने पर हर auto का 10% कटेगा (शर्त रखने पर)।</li>
+        <li>ग्रुप का डिपॉजिट नंबर सिर्फ: <strong>8920707064</strong>. किसी और से न पूछें।</li>
+        <li>Popular code से गोटी खुलने पर exit allowed है पर 10 steps से आगे न बढ़े तो ही cancel होगा।</li>
+        <!-- Add any additional rules here -->
       </ol>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer class="footer">
-    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
+    <p>© 2025 JokerLudo Group. Designed with ❤️ by Mr Bhaiya.</p>
   </footer>
 
 </body>
